fdo#45543 fix RTF import of ms932-encoded characters